# penin3

./: .gitignore  .gitmodules  ATIVAR_DARWINACCI_AGORA.sh  AUDITORIA_DARWINACCI_CPU_COMPLETA_2025_10_06.md  DARWINACCI_DAEMON.py  DARWINACCI_QUICK_INTEGRATION.py  DARWINACCI_README.md  Dockerfile.darwinacci  IA3_247_DAEMON.py  IA3_24_7_MONITORING.py  IA3_ATOMIC_BOMB_CORE.py  IA3_ATOMIC_BOMB_CORE_deterministic.py  IA3_AUTOMODIFICATION_ENGINE.py  IA3_AUTOVALIDATION_CALIBRATION.py  IA3_AUTOVALIDATION_CALIBRATION_deterministic.py  IA3_CORE_ORCHESTRATOR.py  IA3_CORE_ORCHESTRATOR_deterministic.py  IA3_EMERGENCE_DETECTOR.py  IA3_EMERGENCE_DETECTOR_deterministic.py  IA3_EMERGENT_CORE.py  IA3_EMERGENT_CORE_deterministic.py  IA3_INFINITE_EVOLUTION_ENGINE.py  IA3_INFINITE_EVOLUTION_ENGINE_deterministic.py  IA3_INTEGRATOR.py  IA3_LAUNCHER.py  IA3_REAL_EVOLUTED_SYSTEM.py  IA3_REAL_EVOLUTED_SYSTEM_V2.py  IA3_REAL_EVOLUTED_SYSTEM_V2_deterministic.py  IA3_REAL_EVOLUTED_SYSTEM_deterministic.py  IA3_REAL_FEEDBACK_ENGINE.py  IA3_REAL_INTELLIGENCE_SYSTEM.py  IA3_REAL_INTELLIGENCE_SYSTEM_deterministic.py  IA3_REAL_SYSTEM.py  IA3_REAL_SYSTEM_deterministic.py  IA3_SYSTEM_EVOLVED_IA3.py  IA3_SYSTEM_EVOLVED_IA3_deterministic.py  IA3_SYSTEM_INTEGRATOR.py  IA3_TRUE_EMERGENCE_ENGINE.py  IA3_TRUE_EMERGENCE_ENGINE_CORRECTED.py  IA3_TRUE_EMERGENCE_ENGINE_deterministic.py  (+101 more)
fibonacci-omega/: .dockerignore  .gitignore  Dockerfile  ENTREGA_FINAL.md  INSTALLATION_TEST.sh  INTEGRATION_GUIDE.md  LICENSE  Makefile  PROJECT_SUMMARY.md  QUICK_START.md  README.md  pyproject.toml  requirements.txt  setup.py
fibonacci-omega/core/: gates.py  population.py
fibonacci-omega/fibonacci_engine/: __init__.py
fibonacci-omega/fibonacci_engine/adapters/: __init__.py  rl_synthetic.py  supervised_synthetic.py  tool_pipeline.py
fibonacci-omega/fibonacci_engine/api/: __init__.py  cli.py  rest.py
fibonacci-omega/fibonacci_engine/core/: __init__.py  curriculum.py  map_elites.py  math_utils.py  meta_controller.py  motor_fibonacci.py  rollback_guard.py  worm_ledger.py
fibonacci-omega/fibonacci_engine/examples/: config_rl.yaml  config_supervised.yaml  run_example.py
fibonacci-omega/fibonacci_engine/persistence/: .gitkeep
(+171478 files in other folders)
