[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "fibonacci-engine"
version = "1.0.0"
description = "Universal AI Optimization Engine inspired by Fibonacci sequence and golden ratio"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Fibonacci Engine Team"},
]
keywords = ["ai", "optimization", "fibonacci", "quality-diversity", "evolution"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.21.0",
    "click>=8.0.0",
    "fastapi>=0.95.0",
    "uvicorn>=0.20.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-timeout>=2.1.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=0.990",
]

[project.scripts]
fib = "fibonacci_engine.api.cli:cli"

[project.urls]
Homepage = "https://github.com/fibonacci-engine/fibonacci-engine"
Documentation = "https://github.com/fibonacci-engine/fibonacci-engine#readme"
Repository = "https://github.com/fibonacci-engine/fibonacci-engine"

[tool.setuptools]
packages = ["fibonacci_engine", "fibonacci_engine.core", "fibonacci_engine.adapters", "fibonacci_engine.api"]

[tool.pytest.ini_options]
testpaths = ["fibonacci_engine/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=fibonacci_engine --cov-report=term-missing --cov-report=html"

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
